@@ -1,5 +1,7 @@
 == Unreleased
 
+- Update API version with 2023-07, 2023-10, 2024-01 releases ([#694](https://github.com/Shopify/shopify_python_api/pull/694))
+
 == Version 12.3.0
 
 - Update API version with 2023-04 release ([#649](https://github.com/Shopify/shopify_python_api/pull/649))
